client/src/App.css
#root {
  width: 50%;
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
}

.home {
  text-align: center;
}

.home h1 {
  font-size: 3rem;
  line-height: 1.1;
  margin-bottom: 0px;
}

.home h2 {
  font-size: 1.5rem;
  margin-bottom: 3rem;
}

.home .form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.home .input-box {
  display: flex;
  flex-direction: column;
  margin-bottom: 1.5rem;
  width: 300px;
}

.home .input-box label {
  text-align: left;
  margin-bottom: 0.5rem;
  font-weight: 500;
}

.home .input-box input {
  padding: 0.75rem;
  font-size: 1rem;
  border: 0px;
  border-radius: 0.75rem;
}

.home .code-input {
  text-transform: uppercase;
}

.home .error {
  color: red;
  margin-top: 0;
}

.home button {
  display: block;
  text-align: center;
  width: 18.75rem;
  font-size: 1rem;
  margin: 0 auto;
  padding: 0.7em 1.2em;
  border-radius: 1rem;
  border: 1px solid transparent;
  font-weight: 500;
  font-family: inherit;
  background: #1C2541;
  cursor: pointer;
  transition: border-color 0.25s;
}

.home button:hover {
  background: #445ba0;
}

.home .host-div {
  height: 15vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.home .host-div h2 {
  font-weight: 500;
  margin-bottom: 1rem;
}

/* HostView */

.current {
  position: fixed;
  top: 0;
  left: 5vw;
  font-size: 0.8rem;
  display: flex;
  height: 5vh;
  align-items: center;
}

.current .song {
  position: fixed;
  left: 5.5vw;
  width: 45%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.current .singer {
  position: fixed;
  right: 5.5vw;
  width: 40%;
  text-align: right;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.theater {
  display: flex;
  flex-direction: column;
  position: fixed;
  top: 5vh;
  left: 5vw;
  z-index: -1;
  width: 90vw;
  height: 88vh;
  overflow: hidden;
  text-align: center;
  justify-content: center;
  background-color: #0e0e0e;
}

.theater p {
  font-size: 25px;
  margin: 0.25rem auto;
}

.theater iframe {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  min-width: 100%;
  min-height: 100%;
}

/* Sidebar styles */
.member-sidebar {
  position: fixed;
  top: 5vh;
  left: -300px; /* hidden off screen */
  width: 300px;
  height: 88vh;
  background-color: #1d1441;
  color: white;
  padding: 20px;
  box-sizing: border-box;
  transition: left 0.3s ease;
  z-index: 1001;
  border-radius: 10px;
  opacity: 95%;
}

.member-sidebar.open {
  left: 0px;
}

.member-sidebar ul {
  list-style-type: none;
  padding: 0;
}

.member-sidebar li {
  background: #1C2541;
  border-radius: 0.75rem;
  padding: 0rem 0.5rem;
  display: flex;
  list-style: none;
  align-items: center;
  max-height: 5vh;
  overflow: hidden;
  margin-bottom: 10px;
}

.member-sidebar li button {
  all: unset;
  cursor: pointer;
  position: absolute;
  right: 30px;
  display: flex;
  align-items: center;

}

/* Backdrop styles */
.backdrop {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  z-index: 1000; /* behind sidebar */
}


.footer {
  width: 100vw;
  padding: 0 5vw;
  height: 7vh;
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  left: 0;
  background: linear-gradient(#08002b, #28243c);
}

.num-users {
  all: unset;
  font-size: 2rem;
  font-weight: 600;
  width: 20%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.num-users button {
  all: unset;
  cursor: pointer;
  margin-left: 10%;
  margin-right: auto;
}


.room-info {
  text-align: center;
  margin: 0.75rem auto;
}

.room-info h2, 
.room-info p {
  margin: 0;
}

.room-info h2 {
  font-size: 1.5rem;
}

.queue-info {
  font-size: 0.7rem;
  width: 20%;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.queue-info h2 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
}

.queue-info button {
  display: block;
  margin: auto;
  border: 1px solid transparent;
  border-radius: 0.5rem;
  background: #1C2541;
  padding: 0.5rem;
  transition: border-color 0.25s;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  margin-top: 0.25rem;
  font-size: 0.7rem;
}

.queue-info button:hover {
  background: #445ba0;
}

/* UserView */

.search-bar {
  text-align: center;
  position: relative;
  width: 60%;
  margin: 0 auto;
}
.search-bar input {
  width: 100%;
  height: 2rem;
  font-size: 1rem;
  padding: 0.25rem 0.5rem;
  padding-right: 0;
  border: 0px;
  border-radius: 0.75rem;
}

.search-bar button {
  position: absolute;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  border: none;
  background: transparent;
  cursor: pointer;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.spinner {
  margin: 20px 0;
  border: 6px solid #1a1a1a;
  border-top: 6px solid #8497f7;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  animation: spin 1s linear infinite;
}

.song-card {
  background: #1C2541;
  border-radius: 0.75rem;
  padding: 1rem;
  margin: 0.5rem;
  display: flex;
  list-style: none;
  align-items: center;
  max-height: 5vh;
  overflow: hidden;
}

ul {
  padding: 0;
}

.song-card img {
  max-height: 5vh;
  flex-shrink: 0;
}

.song-card .track-text {
  margin: 0 1rem;
  min-width: 0;
  flex: 1;
}

.song-card .track-name,
.song-card .artists {
  margin: 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.song-card .track-name {
  font-size: 1.5rem;
  font-weight: 600;
}

.song-card .artists {
  font-size: 0.75rem;
  margin-top: 0.1rem;
}

.song-card button {
  margin-left: auto;
  height: 50%;
  aspect-ratio: 1 / 1;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  border-radius: 50%;
  border: 1px solid transparent;
  padding: 0;
  background: none;
  cursor: pointer;
}

.song-card button:hover {
  cursor: pointer;

}

@media (max-width: 600px) {
  .search-bar {
    width: 100%;
  }

  .song-card {
    width: 85vw;
    max-width: none;
  }

  ul {
  display: flex;
  flex-direction: column;
  align-items: center; /* center list items horizontally */
  padding: 0;
}
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

